--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "deploy": "npm run build && touch out/.nojekyll && gh-pages -d out --dotfiles"
   },
   "dependencies": {
-    "framer-motion": "^10.12.16",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "framer-motion": "^11.15.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
